# KidneyCare-Diesel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  diesel.toml
kidney_diesel/: fly.toml
kidney_diesel/migrations/2025-04-01-060652_add_column_meal_time/: down.sql  up.sql
kidney_diesel/src/: lib.rs  models.rs
kidney_diesel/src/routes/: ingredient.rs  mod.rs
src/: main.rs  schema.rs
src/routes/: mealplan.rs  recipe.rs
