[package]
name = "kidney_diesel"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.5", features = ["cors"] }
http = "1.0"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
dotenvy = "0.15"
reqwest = { version = "0.12.15", features = ["json"] }
tracing = "0.1.41"
